--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                 <h1 class="display-5 mb-4">Welcome To <span class="text-primary">Global Life Care</span></h1>
                 <h4 class="text-primary mb-4">We aim to simplify daily life with reliable and personalized care.</h4>
                 <p class="mb-4">At Global Health Care, we believe in making everyday living easier and more fulfilling. Our services cover a wide range of essential needs, including healthcare assistance for your well-being, kitchen assistance to simplify your culinary tasks, and domestic assistance to keep your home organized and stress-free. With a focus on reliability and care, we aim to be your trusted partner in creating a healthier, happier lifestyle. Let us take care of the details, so you can focus on what truly matters.</p>
-                <a href="" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Get A Quote</a>
+                <a href="https://wa.me/<PHONE_NUMBER>?text=Hello,%20I%20need%20assistance%20with..." target="_blank" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Get A Quote</a>
             </div>
             <div class="col-lg-6">
                 <div class="h-100 d-flex flex-column justify-content-center bg-primary p-5">
@@ -83,7 +83,7 @@
                         </div>
                         <div class="ps-4">
                             <h3>Health Care Assistance</h3>
-                            <p class="mb-0">Focused on your well-being, we provide support for daily health routines, medication reminders, and compassionate care to ensure a stress-free experience.</p>
+                            <p class="mb-0">Focused on your well-being, we offer support for daily health routines, medication reminders, and compassionate care for a stress-free experience.</p>
                         </div>
                     </div>
                     <div class="d-flex text-white mb-5">
@@ -119,19 +119,19 @@
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Quick Links</h3>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
-                    <a class="text-secondary" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
+                    <a class="text-secondary mb-2" href="index.html"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
+                    <a class="text-secondary mb-2" href="about.html"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
+                    <a class="text-secondary mb-2" href="service.html"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
+                    <a class="text-secondary" href="contact.html"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Popular Links</h3>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
-                    <a class="text-secondary" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
+                    <a class="text-secondary mb-2" href="index.html"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
+                    <a class="text-secondary mb-2" href="about.html"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
+                    <a class="text-secondary mb-2" href="service.html"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
+                    <a class="text-secondary" href="contact.html"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6">
