--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase">Lifestyle Assistance</h5>
                             <h1 class="display-1 text-white mb-md-4">We Provide Assistance For Your Problems</h1>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Get Quote</a>
+                            <a href="https://wa.me/<PHONE_NUMBER>?text=Hello,%20I%20need%20assistance%20with..." target="_blank" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Get Quote</a>
                             <a href="" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Contact Us</a>
                         </div>
                     </div>
@@ -101,7 +101,7 @@
                 <h1 class="display-5 mb-4">Welcome To <span class="text-primary">Global Life Care</span></h1>
                 <h4 class="text-primary mb-4"> We aim to simplify daily life with reliable and personalized care.</h4>
                 <p class="mb-4">At Global Health Care, we believe in making everyday living easier and more fulfilling. Our services cover a wide range of essential needs, including healthcare assistance for your well-being, kitchen assistance to simplify your culinary tasks, and domestic assistance to keep your home organized and stress-free. With a focus on reliability and care, we aim to be your trusted partner in creating a healthier, happier lifestyle. Let us take care of the details, so you can focus on what truly matters.</p>
-                <a href="" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Get A Quote</a>
+                <a href="https://wa.me/<PHONE_NUMBER>?text=Hello,%20I%20need%20assistance%20with..." target="_blank" btn btn-primary py-md-3 px-md-5 rounded-pill">Get A Quote</a>
             </div>
             <div class="col-lg-6">
                 <div class="h-100 d-flex flex-column justify-content-center bg-primary p-5">
@@ -111,7 +111,7 @@
                         </div>
                         <div class="ps-4">
                             <h3>Health Care Assistance</h3>
-                            <p class="mb-0">Focused on your well-being, we provide support for daily health routines, medication reminders, and compassionate care to ensure a stress-free experience.</p>
+                            <p class="mb-0">Providing professional healthcare support to ensure your well-being and peace of mind.</p>
                         </div>
                     </div>
                     <div class="d-flex text-white mb-5">
@@ -120,7 +120,7 @@
                         </div>
                         <div class="ps-4">
                             <h3>Kitchen Assistance</h3>
-                            <p class="mb-0">Streamline your kitchen tasks with help in meal planning, cooking, grocery organization, and maintaining a clean, efficient space.</p>
+                            <p class="mb-0">Helping you manage your kitchen efficiently with personalized and organized support.</p>
                         </div>
                     </div>
                     <div class="d-flex text-white">
@@ -129,7 +129,7 @@
                         </div>
                         <div class="ps-4">
                             <h3>Domestic Assistance</h3>
-                            <p class="mb-0">Effortlessly manage your home with services like cleaning, laundry, and organization, creating a tidy and stress-free living space.</p>
+                            <p class="mb-0">Comprehensive support to help you maintain a comfortable and organized home environment.</p>
                         </div>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                         <i class="fa fa-heartbeat fa-2x"></i>
                     </div>
                     <h3 class="mb-3">Health Care Assistance</h3>
-                    <p class="mb-0">Focused on your well-being, we provide support for daily health routines, medication reminders, and compassionate care to ensure a stress-free experience.</p>
+                    <p class="mb-0">Providing professional healthcare support to ensure your well-being and peace of mind.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -161,7 +161,7 @@
                         <i class="fa fa-utensils fa-2x"></i>
                     </div>
                     <h3 class="mb-3">Kitchen Assistance</h3>
-                    <p class="mb-0">Streamline your kitchen tasks with help in meal planning, cooking, grocery organization, and maintaining a clean, efficient space.</p>
+                    <p class="mb-0">Helping you manage your kitchen efficiently with personalized and organized support.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -170,57 +170,33 @@
                         <i class="fa fa-home fa-2x"></i>
                     </div>
                     <h3 class="mb-3">Domestic Assistance</h3>
-                    <p class="mb-0">Effortlessly manage your home with services like cleaning, laundry, and organization, creating a tidy and stress-free living space.</p>
+                    <p class="mb-0">Comprehensive support to help you maintain a comfortable and organized home environment.</p>
                 </div>
             </div>
         </div>
     </div>
     <!-- Services End -->
 
-    <!-- Quote Start -->
+    <!-- WhatsApp Chat Section Start -->
     <div class="container-fluid bg-secondary px-0">
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
-                <h1 class="display-5 mb-4">Request A Free Quote</h1>
-                <p class="mb-4">Curious about how we can assist you? Request a free quote today and discover customized solutions tailored to your healthcare, kitchen, and domestic needs. Our team will provide you with a detailed estimate and ensure all your questions are answered. Let us help make your life simpler and more organized—reach out now!</p>
-                <form>
-                    <div class="row gx-3">
-                        <div class="col-6">
-                            <div class="form-floating">
-                                <input type="text" class="form-control" id="form-floating-1" placeholder="John Doe">
-                                <label for="form-floating-1">Full Name</label>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="form-floating mb-3">
-                                <input type="email" class="form-control" id="form-floating-2" placeholder="name@example.com">
-                                <label for="form-floating-2">Email address</label>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="form-floating">
-                                <select class="form-select" id="floatingSelect" aria-label="Financial Consultancy">
-                                    <option selected>Healthcare Assistance</option>
-                                    <option value="1">Kitchen Assistance</option>
-                                    <option value="2">Home Assistance</option>
-                                </select>
-                                <label for="floatingSelect">Select A Service</label>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <button class="btn btn-primary w-100 h-100" type="submit">Request A Quote</button>
-                        </div>
-                    </div>
-                </form>
+                <h1 class="display-5 mb-4">Chat With Us On WhatsApp</h1>
+                <p class="mb-4">Have questions or need assistance? Chat with us on WhatsApp for quick responses and personalized support. Click the button below to get started!</p>
+                <a href="https://wa.me/<PHONE_NUMBER>?text=Hello,%20I%20need%20assistance%20with..." 
+                class="btn btn-primary py-md-3 px-md-5 rounded-pill" 
+                target="_blank">
+                    Start Chat
+                </a>
             </div>
             <div class="col-lg-6" style="min-height: 400px;">
                 <div class="position-relative h-100">
-                    <img class="position-absolute w-100 h-100" src="img/assistance2.jpg" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100" src="img/assistance2.jpg" alt="Chat support" style="object-fit: cover;">
                 </div>
             </div>
         </div>
     </div>
-    <!-- Quote End -->
+<!-- WhatsApp Chat Section End -->
 
 
     <!-- Testimonial Start -->
@@ -277,19 +253,19 @@
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Quick Links</h3>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
-                    <a class="text-secondary" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
+                    <a class="text-secondary mb-2" href="index.html"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
+                    <a class="text-secondary mb-2" href="about.html"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
+                    <a class="text-secondary mb-2" href="service.html"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
+                    <a class="text-secondary" href="contact.html"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Popular Links</h3>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
-                    <a class="text-secondary" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
+                    <a class="text-secondary mb-2" href="index.html"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
+                    <a class="text-secondary mb-2" href="about.html"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
+                    <a class="text-secondary mb-2" href="service.html"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
+                    <a class="text-secondary" href="contact.html"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6">
