--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                 <h1 class="display-5 mb-4">Welcome To <span class="text-primary">Global Life Care</span></h1>
                 <h4 class="text-primary mb-4">We aim to simplify daily life with reliable and personalized care.</h4>
                 <p class="mb-4">At Global Health Care, we believe in making everyday living easier and more fulfilling. Our services cover a wide range of essential needs, including healthcare assistance for your well-being, kitchen assistance to simplify your culinary tasks, and domestic assistance to keep your home organized and stress-free. With a focus on reliability and care, we aim to be your trusted partner in creating a healthier, happier lifestyle. Let us take care of the details, so you can focus on what truly matters.</p>
-                <a href="https://wa.me/<PHONE_NUMBER>?text=Hello,%20I%20need%20assistance%20with..." target="_blank" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Chat With Us</a>
+                <a href="https://wa.me/+447823434871?text=Hello,%20I%20need%20assistance%20with..." target="_blank" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Chat With Us</a>
             </div>
             <div class="col-lg-6">
                 <div class="h-100 d-flex flex-column justify-content-center bg-primary p-5">
@@ -137,8 +137,8 @@
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
                 <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>13 Harbury Rd, Henleaze, Bristol BS9 4PN, UK</p>
-                <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>info@example.com</p>
-                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+012 345 67890</p>
+                <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i><a href="mailto:Globallifecareuk@gmail.com">Globallifecareuk@gmail.com</a></p>
+                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i><a href="tel:+447823434871">+447823434871</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Follow Us</h3>
