--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 
     <script>
         function sendToWhatsApp() {
-            let phone = "9037898734"; // Replace with your WhatsApp number (without the "+" sign)
+            let phone = "447823434871"; // Replace with your WhatsApp number (without the "+" sign)
 
             let name = document.getElementById('Name').value.trim();
             let email = document.getElementById('Email').value.trim();
@@ -162,8 +162,8 @@
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
                 <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>13 Harbury Rd, Henleaze, Bristol BS9 4PN, UK</p>
-                <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>info@example.com</p>
-                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+012 345 67890</p>
+                <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i><a href="mailto:Globallifecareuk@gmail.com">Globallifecareuk@gmail.com</a></p>
+                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i><a href="tel:+447823434871">+447823434871</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Follow Us</h3>
