--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase">Lifestyle Assistance</h5>
                             <h1 class="display-1 text-white mb-md-4">We Provide Assistance For Your Problems</h1>
-                            <a href="https://wa.me/<PHONE_NUMBER>?text=Hello,%20I%20need%20assistance%20with..." target="_blank" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Chat With Us</a>
-                            <a href="tel:+1234567890" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Contact Us</a>
+                            <a href="https://wa.me/+447823434871?text=Hello,%20I%20need%20assistance%20with..." target="_blank" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Chat With Us</a>
+                            <a href="contact.html" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase">Lifestyle Assistance</h5>
                             <h1 class="display-1 text-white mb-md-4">Simplifying everyday living with care and expertise.</h1>
-                            <a href="https://wa.me/<PHONE_NUMBER>?text=Hello,%20I%20need%20assistance%20with..." target="_blank" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Chat With Us</a>
+                            <a href="https://wa.me/+447823434871?text=Hello,%20I%20need%20assistance%20with..." target="_blank" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Chat With Us</a>
                             <a href="" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Contact Us</a>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
             <div class="col-lg-6 py-6 px-5">
                 <h1 class="display-5 mb-4">Chat With Us On WhatsApp</h1>
                 <p class="mb-4">Have questions or need assistance? Chat with us on WhatsApp for quick responses and personalized support. Click the button below to get started!</p>
-                <a href="https://wa.me/<PHONE_NUMBER>?text=Hello,%20I%20need%20assistance%20with..." 
+                <a href="https://wa.me/+447823434871?text=Hello,%20I%20need%20assistance%20with..." 
                 class="btn btn-primary py-md-3 px-md-5 rounded-pill" 
                 target="_blank">
                     Start Chat
@@ -270,8 +270,8 @@
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
                 <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>13 Harbury Rd, Henleaze, Bristol BS9 4PN, UK</p>
-                <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>info@example.com</p>
-                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+012 345 67890</p>
+                <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i><a href="mailto:Globallifecareuk@gmail.com">Globallifecareuk@gmail.com</a></p>
+                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i><a href="tel:+447823434871">+447823434871</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Follow Us</h3>
