--- a/service.html
+++ b/service.html
@@ -104,30 +104,31 @@
     </div>
     <!-- Services End -->
 
+
     <!-- Footer Start -->
+
     <div class="container-fluid bg-dark text-secondary p-5">
         <div class="row g-5">
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Quick Links</h3>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-secondary mb-2" href="index.html"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                    <a class="text-secondary mb-2" href="about.html"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                    <a class="text-secondary mb-2" href="service.html"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
-                    <a class="text-secondary" href="contact.html"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
+                    <a class="text-secondary mb-2" href="contact.html"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
+                    <a class="text-secondary" href="career.html"><i class="bi bi-arrow-right text-primary me-2"></i>Careers</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Popular Links</h3>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-secondary mb-2" href="index.html"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
                     <a class="text-secondary mb-2" href="about.html"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
                     <a class="text-secondary mb-2" href="service.html"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
+                    <a class="text-secondary mb-2" href="career.html"><i class="bi bi-arrow-right text-primary me-2"></i>Careers</a>
                     <a class="text-secondary" href="contact.html"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
-                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>13 Harbury Rd, Henleaze, Bristol BS9 4PN, UK</p>
+                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i><a href="https://maps.app.goo.gl/rfcsq3mSwNNWjxzBA" target="_blank">Harbury Rd, Henleaze, Bristol BS9 4PN, UK</a></p>
                 <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i><a href="mailto:Globallifecareuk@gmail.com">Globallifecareuk@gmail.com</a></p>
                 <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i><a href="tel:+447823434871">+447823434871</a></p>
             </div>
@@ -144,8 +145,7 @@
         <p class="m-0">&copy; <a class="text-secondary border-bottom" href="#">Global Life Care Pvt Ltd</a>. All Rights Reserved.</p>
     </div>
     <!-- Footer End -->
-
-
+     
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
 
