changed job roles

--- a/index.html
+++ b/index.html
@@ -292,9 +292,9 @@
                         <div class="mb-3 col-md-6">
                             <label class="form-label">Position Applying For</label>
                             <select id="position" name="position" class="form-select">
-                                <option value="Web Developer">Web Developer</option>
-                                <option value="UI/UX Designer">UI/UX Designer</option>
-                                <option value="Data Analyst">Data Analyst</option>
+                                <option value="Healthcare Assistant">Healthcare Assistant</option>
+                                <option value="Domestic Assistant">Domestic Assistant</option>
+                                <option value="Kitchen Assistant">Kitchen Assistant</option>
                             </select>
                         </div>
                     </div>
